--- a/partitionierende_clusteranalyse_sample_size_1000.ipynb
+++ b/partitionierende_clusteranalyse_sample_size_1000.ipynb
@@ -348,7 +348,8 @@
     "<li>Sensitivität=TP/(TP+FN)</li>\n",
     "<li>Prävalenz=(FN+TP)/n</li>\n",
     "    </ul>\n",
-    "Bei größeren Matrizen werden zur Berechnung der Genauigkeit alle Werte in der Diagonalen miteinander addiert und durch die gesamte Anzahl geteilt.\n"
+    "Bei größeren Matrizen werden zur Berechnung der Genauigkeit alle Werte in der Diagonalen miteinander addiert und durch die gesamte Anzahl geteilt.\n",
+    "In unserem Fall handelt es sich um eine 4x4 Matrix, da wir die 4 Cluster der Bonitätsklassen einander gegenüberstellen."
    ]
   },
   {
