--- a/partitionierende_clusteranalyse_sample_size_1000.ipynb
+++ b/partitionierende_clusteranalyse_sample_size_1000.ipynb
@@ -22,7 +22,7 @@
     "Bevor mit dem partitionierenden Clustering begonnen werden kann, wird ein Datensatz benötigt. Dieser wird in diesem Beispiel mit Hilfe der make_blobs Methode erzeugt. <br>\n",
     "\n",
     "<table style=\"width:100%\">\n",
-    "    <caption style=\"color:white\">Parameter der make_blobs Methode</b></caption>\n",
+    "    <caption style=\"color:black\"><b>Parameter der make_blobs Methode</b></caption>\n",
     "  <tr>\n",
     "    <th style=\"text-align: left\">Parameter</th>\n",
     "    <th style=\"text-align: left\">Bedeutung</th>\n",
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Visualisierung mit Pairplot</h3>\n",
+    "<h3>Visualisierung mit Pairplot</h3><br/>\n",
     "Zur Visualisierung der Verteilung von Datensätzen anhand ihrer Merkmale können verschiedene Methoden angewandt werden. \n",
     "Im Folgenden wurde der Dataframe der Pairplot Methode alsParameter übergeben. Als Rückgabewert der Methode werden immer zwei Merkmale (in Form von Streudiagrammen) zueinander in Beziehung gesetzt.\n",
     "Dies erfolgt dann für jede mögliche Kombination, sodass bei fünf Merkmalen eine 5x5 Matrix entsteht. Mit dem zusätzlichen Paramerter \"hue\" werden die Zielklassen eingefärbt."
@@ -209,7 +209,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x285e7b65280>"
+       "<seaborn.axisgrid.PairGrid at 0x238ed0f4550>"
       ]
      },
      "execution_count": 4,
@@ -239,8 +239,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Visualisierung mit Scatterplot</h3>\n",
-    "Im nächsten Schritt werden die Datensätze fünfdimensional dargestellt. Die Merkmale \"Gehalt\", \"Alter\" und \"Disporahmen\" werden an der X, Y und Z-Achse abgebildet. Das Merkmal \"Kontostand\" wird über die Farbe (je dunkler desto höher der Wert) und das Merkmal \"Zahlungsverpflichtungen\" über die Größe modelliert (je größer desto höher der Wert). Über Farbe und Größe können so die vierte und fünfte Dimension simuliert werden.\n",
+    "<h3>Visualisierung mit Scatterplot</h3><br/>\n",
+    "Im nächsten Schritt werden die Datensätze fünfdimensional dargestellt. Die Merkmale \"Gehalt\", \"Alter\" und \"Disporahmen\" werden an der X, Y und Z-Achse abgebildet. Das Merkmal \"Kontostand\" wird über die Farbe (je dunkler desto höher der Wert) und das Merkmal \"Zahlungsverpflichtungen\" über die Größe modelliert (je größer desto höher der Wert). Über Farbe und Größe können so die vierte und fünfte Dimension simuliert werden.<br/>\n",
     "Um das untere Codesnippet ausführen zu können, ist die Installation der \"plotly\" Bibliothek erforderlich (pip install plotly).\n",
     "Quelle: https://github.com/ostwalprasad/PythonMultiDimensionalPlots"
    ]
@@ -317,7 +317,7 @@
     "\n",
     "Der Methode KMeans wurden hier zwei Parameter übergeben: Die Anzahl der Cluster und ein Integer für random_state damit bei wiederholtem Methodenaufruf die selben Zentroide gewählt werden. Mit den Methodenaufruf fit() übergeben wir als Parameter das Data Set welches geclustert werden soll. <br/>\n",
     "Die Variable \"kmeans\" stellt das Modell dar, welches durch das Data Set trainiert werden soll.\n",
-    "Mit kmeans.predict() kann dann trainierte Model an einem Datenbestand angewendet werden."
+    "Mit kmeans.predict() kann dann das trainierte Model an einem Datenbestand angewendet werden."
    ]
   },
   {
@@ -337,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Angleichen der Bezeichnungen von Zielklassen und durch KMeans gebildeten Cluster</h3>\n",
+    "<h3>Angleichen der Bezeichnungen von Zielklassen und durch KMeans gebildeten Cluster</h3><br/>\n",
     "Da KMeans nicht die Bezeichnungen der Zielklassen kennt, stimmen die Bezeichnungen der Cluster eventuell nicht mit denen der Zielklassen überein. Zur Verdeutlichung: Es ist nicht zwangsläufig der Fall, dass KMeans unter den Cluster \"0\" die selben Werte subsumiert, wie es die make_blobs Methode bei der Zielkasse \"0\" tat. Auf unser Beispiel bezogen könnte es somit sein, dass KMeans unter den Cluster \"0\" Datensätze mit einer sehr schlechten Bonität einordnet, unsere Zielklasse dort im Gegensatz dazu aber eine sehr gute Bonität. Um Zielklassen und durch KMeans gebildete Cluster miteinander vergleichen zu können, werden in dem folgenden Schritt die Bezeichnungen der gebildeten Cluster and die Bezeichnungen der Zielklassen angeglichen:"
    ]
   },
@@ -482,9 +482,9 @@
    "source": [
     "Zunächst wird mit dem Methodenaufruf numpy.zeros_like(y_kmeans) ein ndArray gebildet, welches die selben Maße wie das übergebene Array beinhaltet. Befüllt ist jenes Array zum Zeitpunkt der Initialisierung ausschließlich mit Nullen. Am Ende wird das ndArray die Werte der Zielklassen beinhalten, allerdings an die Bezeichnungen der Cluster angeglichen.<br>\n",
     "Anschließend durchläuft eine Zählvariable die Zahlen 0 bis 3 (unsere Zielklassen) in einer Schleife. In der Variable \"mask\" wird ein Array mit boolschen Werten gespeichert. Durch den Ausdruck \"(y_kmeans == i)\" sind die Werte des Arrays an den Stellen \"true\", an denen die Stellen des ndArray \"y_kmeans\" mit dem Wert der Zählvariable übereinstimmen. Im ersten Durchlauf der Schleife hätte das Array \"mask\" somit nur an den Stellen den Wert \"true\", an denen ein Datensatz durch KMeans in den Cluster \"0\" eingeordnet wurde. <br>\n",
-    "Im zweiten Schritt werden nun die Nullen im ndArray \"labels\" mit den Werten der jeweiligen (an die Bezeichnung der durch KMeans gebildeten Cluster angeglichenen) Zielklasse überschrieben. Zuerst mit der Zielklasse 0, dann mit der Zielklasse 1 usw. Möglich ist dies, da wir einem ndArray als Index ein boolsches Array mitegeben können. Indiziert werden in dem Array somit jene Werten an den Stellen, an denen das als Index übergebene Array den Wert \"true\" zurück gibt.<br>\n",
+    "Im zweiten Schritt werden nun die Nullen im ndArray \"labels\" mit den Werten der jeweiligen (an die Bezeichnung der durch KMeans gebildeten Cluster angeglichenen) Zielklasse überschrieben. Zuerst mit der Zielklasse 0, dann mit der Zielklasse 1 usw. Möglich ist dies, da wir einem ndArray als Index ein boolsches Array mitgeben können. Indiziert werden in dem Array somit jene Werten an den Stellen, an denen das als Index übergebene Array den Wert \"true\" zurück gibt.<br>\n",
     "Die Anpassung der Bezeichnung der scipy.stats.mode Methode. Diese Methode liefert ein Array mit dem Modus des übergebenen Arrays zurück. Als Parameter übergeben wir hier das ndArray \"y\", welches die Zielklassen beinhaltet. Als Index übergeben wir auch hier das selbe boolsche Array wie bei dem ndArray \"labels\". Somit wird der in dem ndArray \"y\" der häufigste Wert an den Stellen gesucht, an denen KMeans die jeweilige Clusterbezeichnung der Zählvariable zugeteilt hat. Da die Abweichungen von Zielklassen und gebildeten Cluster gewöhnlich den Modus nicht verfälschen dürfte, kann so zuverlässig die eigentliche Bezeichnung des gebildeten Clusters herausgefunden werden. <br>\n",
-    "Da wir als Paramter ein eindimensionales Array übergeben, beinhaltet das Rückgabearray nur einen Wert. Auf jenen können wir somit direkt mit dem Index \"0\" zugreifen. (Bei einem zweidimensionales Array hätte das Rückgabearray eine Länge von 2, usw.) Dieser Wert wird nun an die Stellen eingesetzt, an welchen y_kmeans eine Clustergruppe verordnet hat. Somit wurde die Bezeichnung der von KMeans gebildeten Cluster an die Bezeichnung der Zielklassen angeglichen, ohne die Ergebniss zu verfälschen."
+    "Da wir als Paramter ein eindimensionales Array übergeben, beinhaltet das Rückgabearray nur einen Wert. Auf jenen können wir somit direkt mit dem Index \"0\" zugreifen. (Bei einem zweidimensionales Array hätte das Rückgabearray eine Länge von 2, usw.) Dieser Wert wird nun an die Stellen eingesetzt, an welchen y_kmeans eine Clustergruppe verordnet hat. Somit wurde die Bezeichnung der von KMeans gebildeten Cluster an die Bezeichnung der Zielklassen angeglichen, ohne das Ergebnis zu verfälschen."
    ]
   },
   {
@@ -539,13 +539,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Konfusionsmatrix</h2>\n",
+    "<h2>Konfusionsmatrix</h2><br/>\n",
     "Die Konfusionsmatrix wird nur benutzt, um zu klassifizieren, sie sagt keine numerischen Werte voraus. \n",
     "\n",
-    "<h3>Beispiel:</h3>\n",
-    "Schauen wir zuerst auf ein Beispiel einer 2x2 Konfusionsmatrix. \n",
+    "<h3>Beispiel:</h3><br/>\n",
+    "Im Fall einer 2x2 Matrix könnte sich ein solches Szenario abspielen: \n",
     "\n",
-    " Wir sehen hier eine Matrix mit insgesamt 165 einsortierten Fällen. Nehmen wir einmal an es handelt sich um eine Angabe der Genauigkeit eines Testes, ob ein Mensch erkrankt ist oder nicht. In diesem Fall würde Ja für positiv getestet und Nein für negativ getestet stehen. Wir hätten mit unserem Test 110 als negativ eingestuft, obwohl 105 wirklich nicht erkrankt sind und wir haben 55 positiv getestet, obwohl 60 erkrankt sind. <br/>\n",
+    "In der Beispiel Matrix sind insgesamt 165 einsortierte Fällen zu sehen. Angenommen es handelt sich um eine Angabe der Genauigkeit eines Testes, ob ein Mensch erkrankt ist oder nicht. In diesem Fall würde Ja für positiv getestet und Nein für negativ getestet stehen. Damit würde der Test 110 als negativ einstufen, obwohl 105 wirklich nicht erkrankt sind und es wurden 55 positiv getestet, obwohl 60 erkrankt sind. <br/>\n",
     "![grafik-3.png](attachment:grafik-3.png)<br/>\n",
     "Daraus ergeben sich 100 die in Wirklichkeit und vom Test als negativ eingestuft wurden, diese werden true negatives genannt. Die 50 die richtig als positiv einsortiert wurden, werden true postives genannt. Die 5 falsch positiv getesteten werden false positives genannt oder auch Type 1 Error und die 10 die noch übrig bleiben false negatives oder Type 2 Error. Die true negatives und positives sollen maximiert und die false negatives und positves minimiert werden. Je nach Anwendungsbereich ist es wichtiger einen der beiden false Werte kleiner zu bekommen als den anderen. So ist es zum Beispiel schlimmer falsch negativ auf eine Krankheit getestet zu werden, gegen die es eine Behandlung gibt, als falsch positiv.<br/>\n",
     "![grafik-4.png](attachment:grafik-4.png)<br/>\n",
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "       [  0,   0,   0, 250]], dtype=int64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Zur Veranschaulichung kann eine confusion_matrix in eine Heatmap überführt werden. Der Begriff der Heatmap resultiert aus den verwendeten Farben, die jene einer Wärmebildkamera entsprechen. Je Kräfitger das Rot, desto höher der Wert. Der Vorteil einer Heatmap ist die bessere Darstellung von Zwischenstufen.\n",
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -627,6 +627,13 @@
     "from seaborn import heatmap\n",
     "\n",
     "heatmap(confusion_matrix(labels, y), cmap='Reds', linecolor='Black', linewidths='1', annot= True, fmt='g')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "INTERPRETATION!!!!!"
    ]
   }
  ],
