--- a/partitionierende_clusteranalyse_sample_size_1000.ipynb
+++ b/partitionierende_clusteranalyse_sample_size_1000.ipynb
@@ -576,48 +576,49 @@
     "    <li>Prävalenz=(FN+TP)/n</li>\n",
     "</ul>\n",
     "Bei größeren Matrizen werden zur Berechnung der Genauigkeit alle Werte in der Diagonalen miteinander addiert und durch die gesamte Anzahl geteilt. Insgesamt ist die Konfusionsmatrix genauer als die Güte.<br/>\n",
-    "In unserem Fall handelt es sich um eine 4x4 Matrix, da wir die 4 Cluster der Bonitätsklassen einander gegenüberstellen. Im Folgenden wird diese mithilfe von Python mit der Methode confusion_matrix dargestellt. Der Methode wurden als Parameter die tatsächlichen Zielklassen und die durch die KMeans gebildeten Cluster übergeben: "
+    "In unserem Fall handelt es sich um eine 4x4 Matrix, da wir die 4 Cluster der Bonitätsklassen einander gegenüberstellen. Im Folgenden wird diese mithilfe von Python mit der Methode confusion_matrix dargestellt. Der Methode wurden als Parameter die tatsächlichen Zielklassen und die durch die KMeans gebildeten Cluster übergeben. Zum besseren Verständnis wurde die Konfusionsmatrix einem DataFrame-Objekt inklusive Achsenbeschriftungen übergeben. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[238,   7,   5,   0],\n",
-       "       [  4, 232,  14,   0],\n",
-       "       [  3,  14, 233,   0],\n",
-       "       [  0,   0,   0, 250]], dtype=int64)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted    0    1    2    3\n",
+      "Actual                       \n",
+      "0          238    7    5    0\n",
+      "1            4  232   14    0\n",
+      "2            3   14  233    0\n",
+      "3            0    0    0  250\n"
+     ]
     }
    ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
+    "import numpy as np\n",
     "\n",
-    "confusion_matrix(y, labels)"
+    "matrix = confusion_matrix(y, labels)\n",
+    "df = pd.DataFrame(matrix, columns=np.unique(y), index = np.unique(y))\n",
+    "df.index.name = 'Actual'\n",
+    "df.columns.name = 'Predicted'\n",
+    "print(df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "y = actual = y\n",
-    "x = predicted = labels\n",
-    "\n",
-    "Zur Veranschaulichung kann eine confusion_matrix in eine Heatmap überführt werden. Der Begriff der Heatmap resultiert aus den verwendeten Farben, die jene einer Wärmebildkamera entsprechen. Je Kräfitger das Rot, desto höher der Wert. Der Vorteil einer Heatmap ist die bessere Darstellung von Zwischenstufen.\n",
-    "In Python lässt sich die Heaptmap mit der Methode heatmap darstellen. Als Parameter wurden der Methode die Konfusionsmatrix, die Färbung der Heatmap, die Stärke der Trennlinien der Zellen, sowie zwei weitere zur Beschreibung der Zellen übergeben. "
+    "Zur Veranschaulichung kann eine confusion_matrix in eine Heatmap überführt werden. Der Begriff der Heatmap resultiert aus den verwendeten Farben, die jene einer Wärmebildkamera entsprechen. Je kräftiger das Rot, desto höher der Wert. Der Vorteil einer Heatmap ist die bessere Darstellung von Zwischenstufen.\n",
+    "In Python lässt sich die Heaptmap mit der Methode heatmap darstellen. Als Parameter wurden der Methode die Konfusionsmatrix in Form eines DataFrames inklusive Achsenbeschriftungen, die Färbung der Heatmap, die Stärke der Trennlinien der Zellen, sowie zwei weitere zur Beschreibung der Zellen übergeben. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +627,7 @@
        "<AxesSubplot:xlabel='Predicted', ylabel='Actual'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -645,12 +646,6 @@
    ],
    "source": [
     "from seaborn import heatmap\n",
-    "import numpy as np\n",
-    "\n",
-    "matrix = confusion_matrix(y, labels)\n",
-    "df = pd.DataFrame(matrix, columns=np.unique(y), index = np.unique(y))\n",
-    "df.index.name = 'Actual'\n",
-    "df.columns.name = 'Predicted'\n",
     "\n",
     "heatmap(df, cmap='Reds', linecolor='Black', linewidths='1', annot= True, fmt='g')"
    ]
@@ -659,9 +654,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "INTERPRETATION!!!!!\n",
+    "Actual: tatsächliche Bonitätsklasse <br/>\n",
+    "Predicted: durch kMeans zugeordnete Bonitätsklasse\n",
     "\n",
-    "Quellen zur Güte,Konfusionsmatrix und Heatmap: <br/>\n",
+    "In der Diagonalen werden die korrekt zugeordneten Datensätze dargestellt. Bei einer Güte von 100% würde die Diagonale den dunkelsten möglichen Rotton (Skala: 250) annehmen. Dies ist in der Bonitätsklasse 3 der Fall. Daraus folgt, dass in der Bonitätsklasse 3 alle anderen Felder weiß (Skala: 0) sind. \n",
+    "\n",
+    "In der tatsächlichen Bonitätsklasse 0 liegt keine vollständige Übereinstimmung vor. Das bedeutet, dass der Rotton bei Actual 0 und Predicted 0 etwas heller ist. Durch das kMeans-Verfahren wurden 7 Objekte der Bonitätsklasse 0 der Bonitätsklasse 1 sowie 5 der Bonitätsklasse 2 zugeordnet. Diese Felder sind nun etwas dunkler als bei 0 fehlerhaft eingeordneten Objekten. Diese Interpretation gilt für die weiteren Zeilen simultan: \n",
+    "\n",
+    "Tatsächliche Bonitätsklasse 1:\n",
+    "<ul>\n",
+    "    <li>4 Objekte in Cluster 0 eingeordnet</li>\n",
+    "    <li>232 Objekte korrekt eingeordnet</li>\n",
+    "    <li>14 Objekte in Cluster 2 eingeordnet</li>\n",
+    "    <li>0 Objekte in Cluster 3 eingeordnet</li>\n",
+    "</ul>\n",
+    "\n",
+    "Tatsächliche Bonitätsklasse 2: \n",
+    "<ul>\n",
+    "    <li>3 Objekte in Cluster 0 eingeordnet</li>\n",
+    "    <li>14 Objekte in Cluster 1 eingeordnet</li>\n",
+    "    <li>233 Objekte korrekt eingeordnet</li>\n",
+    "    <li>0 Objekte in Cluster 3 eingeordnet</li>\n",
+    "</ul>\n",
+    "\n",
+    "Folglich wurden insgesamt 47 Kunden in falsche und 953 in die richtigen Bonitätsklassen eingeordnet. Dies führt zur Accuracy von 95,3%.\n",
+    "\n",
+    "Quellen zur Güte, Konfusionsmatrix und Heatmap: <br/>\n",
     "<I><a href=\"https://scikit-learn.org/stable/modules/model_evaluation.html#accuracy-score\">https://scikit-learn.org/stable/modules/model_evaluation.html#accuracy-score</a> [Stand: 27.05.2021]</I><br/>\n",
     "<I><a href=\"https://www.saracus.com/blog/performance-metriken-klassifikation-2-2/\">https://www.saracus.com/blog/performance-metriken-klassifikation-2-2/</a> [Stand: 27.05.2021]</I><br/>\n",
     "<I><a href=\"https://www.youtube.com/watch?v=Y10GEI1NKgA\">https://www.youtube.com/watch?v=Y10GEI1NKgA</a> [Stand: 27.05.2021]</I><br/>\n",
