links zu den Dokumentationen eingefügt

--- a/partitionierende_clusteranalyse_sample_size_1000.ipynb
+++ b/partitionierende_clusteranalyse_sample_size_1000.ipynb
@@ -47,6 +47,7 @@
     "  </tr>\n",
     "  </tr>\n",
     "</table>\n",
+    "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_blobs.html\"><I>->Zur Dokumentation von make_blops<I></a><br>\n",
     "\n",
     "In dem folgenden Szenario stellen die 1000 Datensätze 1000 Kunden einer Bank dar. Die Zentren, bzw. Zielklassen, zu welchen sich die Datensätze zuordnen lassen, werden zur Veranschaulichung (in Anlehnung an das Bankszenario) als Bonitätsklassen bezeichnet."
    ]
@@ -127,7 +128,8 @@
     "Um die Daten mit der pariplot Methode darstellen zu können, müssen diese in ein DataFrame Objekt umgewandelt werden.<br>\n",
     "Ein DataFrame ist eine zweidimensionale, tabellarische Struktur mit beschrifteten Achsen (Zeilen und Spalten). \n",
     "Die einzelnen Zeilen stellen hier die jeweiligen Datensätze dar, während die Spalten die jeweiligen Merkmale des Datensatzes abbilden.\n",
-    "Standardmäßig sind die Zeilen und Spalten mit 0,1,2,3,...,n beschriftet. Im Folgenden werden die Spaltenbeschriftungen zur Verdeutlichung der Situation entsprechend angepasst. Die einzelnen Merkmalsausprägungen weichen hier allerdings von der Realität ab."
+    "Standardmäßig sind die Zeilen und Spalten mit 0,1,2,3,...,n beschriftet. Im Folgenden werden die Spaltenbeschriftungen zur Verdeutlichung der Situation entsprechend angepasst. Die einzelnen Merkmalsausprägungen weichen hier allerdings von der Realität ab. <br>\n",
+    "<a href=\"https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html\"><I>->Zur Dokumentation von DataFrame<I></a><br>"
    ]
   },
   {
@@ -186,7 +188,8 @@
     "<h3>Visualisierung mit Pairplot</h3><br/>\n",
     "Zur Visualisierung der Verteilung von Datensätzen anhand ihrer Merkmale können verschiedene Methoden angewandt werden. \n",
     "Im Folgenden wurde der Dataframe der Pairplot Methode als Parameter übergeben. Als Rückgabewert der Methode werden immer zwei Merkmale (in Form von Streudiagrammen) zueinander in Beziehung gesetzt.\n",
-    "Dies erfolgt dann für jede mögliche Kombination, sodass bei fünf Merkmalen eine 5x5 Matrix entsteht. Mit dem zusätzlichen Paramerter \"hue\" werden die Zielklassen eingefärbt."
+    "Dies erfolgt dann für jede mögliche Kombination, sodass bei fünf Merkmalen eine 5x5 Matrix entsteht. Mit dem zusätzlichen Paramerter \"hue\" werden die Zielklassen eingefärbt. <br>\n",
+    "<a href=\"https://seaborn.pydata.org/generated/seaborn.pairplot.html\"><I>->Zur Dokumentation von pairplot<I></a><br>"
    ]
   },
   {
@@ -303,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2> Partionierendes Clustern </h2><br>\n",
+    "<h2> Partionierendes Clustern </h2>\n",
     "\n",
     "Ablauf einer partitionierenden Clusteranalyse:"
    ]
@@ -328,7 +331,8 @@
     "\n",
     "In Python lässt sich die partitionierende Clusteranalyse mit der Methode KMeans umsetzen. Der Methode werden hier zwei Parameter übergeben: Die Anzahl der Cluster und ein Integer für random_state damit bei wiederholtem Methodenaufruf dieselben Zentroide gewählt werden. Mit dem Methodenaufruf fit() wird das Data Set, welches geclustert werden soll, als Parameter übergeben. <br/>\n",
     "Die Variable \"kmeans\" stellt das Modell dar, welches durch das Data Set trainiert werden soll.\n",
-    "Mit kmeans.predict() kann dann das trainierte Model an einem Datenbestand angewendet werden."
+    "Mit kmeans.predict() kann dann das trainierte Model an einem Datenbestand angewendet werden. <br>\n",
+    "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html\"><I>->Zur Dokumentation von KMeans<I></a><br>\n"
    ]
   },
   {
@@ -349,7 +353,8 @@
    "metadata": {},
    "source": [
     "<h3>Angleichen der Bezeichnungen von Zielklassen und durch KMeans gebildeten Clustern</h3>\n",
-    "Da KMeans nicht die Bezeichnungen der Zielklassen kennt, stimmen die Bezeichnungen der Cluster eventuell nicht mit denen der Zielklassen überein. Zur Verdeutlichung: Es ist nicht zwangsläufig der Fall, dass KMeans unter dem Cluster \"0\" dieselben Werte subsumiert, wie es die make_blobs Methode bei der Zielkasse \"0\" tat. Auf das Beispiel bezogen könnte es somit sein, dass KMeans unter dem Cluster \"0\" Datensätze mit einer sehr schlechten Bonität einordnet, unsere Zielklasse dort im Gegensatz dazu aber eine sehr gute Bonität. Um Zielklassen und durch KMeans gebildete Cluster miteinander vergleichen zu können, werden in dem folgenden Schritt die Bezeichnungen der gebildeten Cluster and die Bezeichnungen der Zielklassen angeglichen:"
+    "Da KMeans nicht die Bezeichnungen der Zielklassen kennt, stimmen die Bezeichnungen der Cluster eventuell nicht mit denen der Zielklassen überein. Zur Verdeutlichung: Es ist nicht zwangsläufig der Fall, dass KMeans unter dem Cluster \"0\" dieselben Werte subsumiert, wie es die make_blobs Methode bei der Zielkasse \"0\" tat. Auf das Beispiel bezogen könnte es somit sein, dass KMeans unter dem Cluster \"0\" Datensätze mit einer sehr schlechten Bonität einordnet, unsere Zielklasse dort im Gegensatz dazu aber eine sehr gute Bonität. Um Zielklassen und durch KMeans gebildete Cluster miteinander vergleichen zu können, werden in dem folgenden Schritt die Bezeichnungen der gebildeten Cluster and die Bezeichnungen der Zielklassen angeglichen:\n",
+    "<I>Quelle: <a href=\"https://jakevdp.github.io/PythonDataScienceHandbook/05.11-k-means.html\">https://jakevdp.github.io/PythonDataScienceHandbook/05.11-k-means.html</a> [Stand: 05.06.2021]</I>"
    ]
   },
   {
@@ -491,8 +496,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<I>Quelle: <a href=\"https://jakevdp.github.io/PythonDataScienceHandbook/05.11-k-means.html\">https://jakevdp.github.io/PythonDataScienceHandbook/05.11-k-means.html</a> [Stand: 05.06.2021]</I>\n",
-    "\n",
     "Zuerst wird mit dem Methodenaufruf numpy.zeros_like(y_kmeans) ein ndArray gebildet, welches dieselben Maße wie das übergebene Array hat. Befüllt ist jenes Array zum Zeitpunkt der Initialisierung ausschließlich mit Nullen. Am Ende wird das ndArray die Werte der Zielklassen beinhalten, allerdings an die Bezeichnungen der Cluster angeglichen.<br>\n",
     "Dafür durchläuft eine Zählvariable zunächst die Zahlen 0 bis 3 (unsere Zielklassen) in einer Schleife. In der Variablen \"mask\" wird ein Array mit boolschen Werten gespeichert. Durch den Ausdruck \"(y_kmeans == i)\" sind die Werte des Arrays an den Stellen \"true\", an denen die Stellen des ndArray \"y_kmeans\" mit dem Wert der Zählvariable übereinstimmen. Im ersten Durchlauf der Schleife hätte das Array \"mask\" somit nur an den Stellen den Wert \"true\", an denen ein Datensatz durch KMeans in den Cluster \"0\" eingeordnet wurde. <br>\n",
     "Im zweiten Schritt werden nun die Nullen im ndArray \"labels\" mit den Werten der jeweiligen (an die Bezeichnung der durch KMeans gebildeten Cluster angeglichenen) Zielklasse überschrieben. Zuerst mit der Zielklasse 0, dann mit der Zielklasse 1 usw. Möglich ist dies, da wir einem ndArray als Index ein boolsches Array mitgeben können. Indiziert werden in dem Array somit jene Werten an den Stellen, an denen das als Index übergebene Array den Wert \"true\" zurück gibt.<br>\n",
@@ -514,7 +517,8 @@
     "$y_{i}$ enspricht dem tatsächlichen Wert <br/>\n",
     "$1(x)$ ist die <a href=\"https://en.wikipedia.org/wiki/Indicator_function\">Indikatorfunktion</a> <br/>\n",
     "Eine andere Möglichkeit die Güte zu berechnen wäre, die tatsächlichen Werte durch die Gesamtanzahl der Datensätze zu dividieren.\n",
-    "Je näher die Accuracy an 1 liegt, desto höher ist die Güte der Vorhersage. In unserem Fall ergibt sich eine Accuracy von 0.953 bzw. 95,3%."
+    "Je näher die Accuracy an 1 liegt, desto höher ist die Güte der Vorhersage. In unserem Fall ergibt sich eine Accuracy von 0.953 bzw. 95,3%. <br>\n",
+    "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.metrics.accuracy_score.html\"><I>->Zur Dokumentation von accuracy_score<I></a><br>"
    ]
   },
   {
@@ -570,7 +574,8 @@
     "    <li>$Prävalenz=\\frac{FN+TP}{n}$</li>\n",
     "</ul>\n",
     "Bei größeren Matrizen werden zur Berechnung der Genauigkeit alle Werte in der Diagonalen miteinander addiert und durch die gesamte Anzahl geteilt. Insgesamt ist die Konfusionsmatrix genauer als die Güte.<br/>\n",
-    "In unserem Fall handelt es sich um eine 4x4 Matrix, da wir die 4 Cluster der Bonitätsklassen einander gegenüberstellen. Im Folgenden wird diese mithilfe von Python mit der Methode confusion_matrix dargestellt. Der Methode wurden als Parameter die tatsächlichen Zielklassen und die durch die KMeans gebildeten Cluster übergeben. Zum besseren Verständnis wurde die Konfusionsmatrix einem DataFrame-Objekt inklusive Achsenbeschriftungen übergeben. "
+    "In unserem Fall handelt es sich um eine 4x4 Matrix, da wir die 4 Cluster der Bonitätsklassen einander gegenüberstellen. Im Folgenden wird diese mithilfe von Python mit der Methode confusion_matrix dargestellt. Der Methode wurden als Parameter die tatsächlichen Zielklassen und die durch die KMeans gebildeten Cluster übergeben. Zum besseren Verständnis wurde die Konfusionsmatrix einem DataFrame-Objekt inklusive Achsenbeschriftungen übergeben. <br>\n",
+    "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html\"><I>->Zur Dokumentation von confusion_matrix<I></a><br>"
    ]
   },
   {
@@ -607,7 +612,8 @@
    "metadata": {},
    "source": [
     "Zur Veranschaulichung kann eine confusion_matrix in eine Heatmap überführt werden. Der Begriff der Heatmap resultiert aus den verwendeten Farben, die jene einer Wärmebildkamera entsprechen. Je kräftiger das Rot, desto höher der Wert. Der Vorteil einer Heatmap ist die bessere Darstellung von Zwischenstufen.\n",
-    "In Python lässt sich die Heatmap mit der Methode heatmap darstellen. Als Parameter wurden der Methode die Konfusionsmatrix in Form eines DataFrames inklusive Achsenbeschriftungen, die Färbung der Heatmap, die Stärke der Trennlinien der Zellen, sowie zwei weitere zur Beschreibung der Zellen übergeben. "
+    "In Python lässt sich die Heatmap mit der Methode heatmap darstellen. Als Parameter wurden der Methode die Konfusionsmatrix in Form eines DataFrames inklusive Achsenbeschriftungen, die Färbung der Heatmap, die Stärke der Trennlinien der Zellen, sowie zwei weitere zur Beschreibung der Zellen übergeben. <br>\n",
+    "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html\"><I>->Zur Dokumentation von heatmap<I></a><br>"
    ]
   },
   {
