--- a/partitionierende_clusteranalyse_sample_size_1000.ipynb
+++ b/partitionierende_clusteranalyse_sample_size_1000.ipynb
@@ -7,7 +7,7 @@
     "<h1>Partitionierende Clusteranalyse</h1>\n",
     "<h2>Generierung der Datensätze</h2>\n",
     "\n",
-    "Bevor mit dem partitionierenden Clustering begonnen werden kann, wird ein Datensatz benötigt. Dieser wird in diesem Beispiel mit Hilfe der make_blobs Methode erzeugt. <br>\n",
+    "Bevor mit dem partitionierenden Clustering begonnen werden kann, wird ein Datensatz benötigt. Dieser wird in diesem Beispiel mithilfe der make_blobs Methode erzeugt. <br>\n",
     "\n",
     "<table style=\"width:100%\">\n",
     "    <caption style=\"color:black\"><b>Parameter der make_blobs Methode</b></caption>\n",
@@ -47,14 +47,14 @@
     "  </tr>\n",
     "  </tr>\n",
     "</table>\n",
-    "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_blobs.html\"><I>->Zur Dokumentation von make_blops<I></a><br>\n",
+    "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_blobs.html\"><I>->Zur Dokumentation von make_blobs<I></a><br>\n",
     "\n",
-    "In dem folgenden Szenario stellen die 1000 Datensätze 1000 Kunden einer Bank dar. Die Zentren, bzw. Zielklassen, zu welchen sich die Datensätze zuordnen lassen, werden zur Veranschaulichung (in Anlehnung an das Bankszenario) als Bonitätsklassen bezeichnet."
+    "In dem folgenden Szenario stellen die 1000 Datensätze 1000 Kunden einer Bank dar. Die Zentren bzw. Zielklassen, zu welchen sich die Datensätze zuordnen lassen, werden zur Veranschaulichung (in Anlehnung an das Bankszenario) als Bonitätsklassen bezeichnet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -125,7 +125,7 @@
     "Y: ndArray mit Ganzzahlen, welche die Zugehörigkeit des einzelnen Datensatzes zur tatsächlichen Zielklasse beeinhaltet.\n",
     "\n",
     "<h2> Visualisierung der Abhängigkeiten</h2> <br>\n",
-    "Um die Daten mit der pariplot Methode darstellen zu können, müssen diese in ein DataFrame Objekt umgewandelt werden.<br>\n",
+    "Um die Daten mit der pairplot Methode darstellen zu können, müssen diese in ein DataFrame Objekt umgewandelt werden.<br>\n",
     "Ein DataFrame ist eine zweidimensionale, tabellarische Struktur mit beschrifteten Achsen (Zeilen und Spalten). \n",
     "Die einzelnen Zeilen stellen hier die jeweiligen Datensätze dar, während die Spalten die jeweiligen Merkmale des Datensatzes abbilden.\n",
     "Standardmäßig sind die Zeilen und Spalten mit 0,1,2,3,...,n beschriftet. Im Folgenden werden die Spaltenbeschriftungen zur Verdeutlichung der Situation entsprechend angepasst. Die einzelnen Merkmalsausprägungen weichen hier allerdings von der Realität ab. <br>\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -187,23 +187,23 @@
    "source": [
     "<h3>Visualisierung mit Pairplot</h3><br/>\n",
     "Zur Visualisierung der Verteilung von Datensätzen anhand ihrer Merkmale können verschiedene Methoden angewandt werden. \n",
-    "Im Folgenden wurde der Dataframe der Pairplot Methode als Parameter übergeben. Als Rückgabewert der Methode werden immer zwei Merkmale (in Form von Streudiagrammen) zueinander in Beziehung gesetzt.\n",
+    "Im Folgenden wurde der Dataframe der Pairplot Methode als Parameter übergeben. Als Rückgabewert der Methode werden immer zwei Merkmale zueinander in Beziehung gesetzt.\n",
     "Dies erfolgt dann für jede mögliche Kombination, sodass bei fünf Merkmalen eine 5x5 Matrix entsteht. Mit dem zusätzlichen Paramerter \"hue\" werden die Zielklassen eingefärbt. <br>\n",
     "<a href=\"https://seaborn.pydata.org/generated/seaborn.pairplot.html\"><I>->Zur Dokumentation von pairplot<I></a><br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1f0cdead790>"
+       "<seaborn.axisgrid.PairGrid at 0x1f9d6311280>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -242,19 +242,19 @@
     "    <li>hohe Zahlungsverpflichtungen</li>\n",
     "</ul>\n",
     "\n",
-    "Diese Aussagen basieren auf einem Vergleich der Bonitätsklassen miteinander. Für eine absolute Einordnungen wäre ein metrischer Richtwert mit Begründung zu wählen. Der Einfachheit halber wurde in diesem Beispiel darauf verzichtet. \n",
+    "Diese Aussagen basieren auf einem visuellen Vergleich der Bonitätsklassen miteinander. Statistisch korrekt wäre die Angabe eines Kriteriums für die Einteilung z. B. \"niedrig\" für das unter Drittel. Der Einfachheit halber wurde in diesem Beispiel darauf verzichtet. \n",
     "\n",
     "Es liegt kein Bezug zur Realität vor, da es sich um künstlich erzeugte Datensätze handelt. Eine Erklärung der kausalen Zusammenhänge zwischen den Merkmalen wie zwischen Alter und Gehalt (junge Kunden haben aufgrund von Studium oder Ausbildung ein niedriges Gehalt) ist somit nicht möglich.\n",
     "\n",
     "<h3>Visualisierung mit Scatterplot</h3><br/>\n",
-    "Im nächsten Schritt werden die Datensätze fünfdimensional dargestellt. Die Merkmale \"Gehalt\", \"Alter\" und \"Disporahmen\" werden an der X-, Y- und Z-Achse abgebildet. Das Merkmal \"Kontostand\" wird über die Farbe (je dunkler desto höher der Wert) und das Merkmal \"Zahlungsverpflichtungen\" über die Größe modelliert (je größer desto höher der Wert). Über Farbe und Größe können so die vierte und fünfte Dimension simuliert werden.<br/>\n",
+    "Im nächsten Schritt werden die Datensätze fünfdimensional dargestellt. Die Merkmale \"Gehalt\", \"Alter\" und \"Disporahmen\" werden an der X-, Y- und Z-Achse abgebildet. Das Merkmal \"Kontostand\" wird über die Farbe (je dunkler, desto höher der Wert) und das Merkmal \"Zahlungsverpflichtungen\" über die Größe modelliert (je größer, desto höher der Wert). Über Farbe und Größe können so die vierte und fünfte Dimension simuliert werden.<br/>\n",
     "Um das untere Codesnippet ausführen zu können, ist die Installation der \"plotly\" Bibliothek erforderlich (pip install plotly).<br/>\n",
     "<I>Quelle: <a href=\"https://github.com/ostwalprasad/PythonMultiDimensionalPlots\">https://github.com/ostwalprasad/PythonMultiDimensionalPlots</a> [Stand: 01.06.2021]</I>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "'5D Plot.html'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -504,13 +504,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<h3>Güte</h3>\n",
     "\n",
-    "In Python lässt sich die Güte mit Hilfe der Methode accuracy_score berechnen. Als Parameter wurden der Methode die tatsächlichen Zielklassen und die durch KMeans gebildeten Cluster übergeben\n",
+    "In Python lässt sich die Güte mithilfe der Methode accuracy_score berechnen. Als Parameter wurden der Methode die tatsächlichen Zielklassen und die durch KMeans gebildeten Cluster übergeben\n",
     "Die Methode berechnet die Genauigkeit mit der folgenden Formel: <br/>\n",
     " $\\texttt{accuracy}(y, \\hat{y}) = \\frac{1}{n_\\text{samples}} \\sum_{i=0}^{n_\\text{samples}-1} 1(\\hat{y}_i = y_i)$ <br/>\n",
     "$\\hat{y}_i$ entspricht dem vorhergesagten Wert <br/>\n",
@@ -523,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -580,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +626,7 @@
        "<AxesSubplot:xlabel='Predicted', ylabel='Actual'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
